--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -1,5 +1,5 @@
 stages:
-  - build-centos7
+  - build-base
   - build-conda
 
 .dind:
@@ -47,11 +47,11 @@ stages:
     - docker build $DOCKER_ARGS $DOCKER_EXTRA_ARGS $CONTEXT_DIR
     - docker push $REPOSITORY:$CI_COMMIT_SHORT_SHA
 
-build_centos7:
+build_base:
   extends: .docker-build
-  stage: build-centos7
+  stage: build-base
   variables:
-    CONTEXT_DIR: $CI_PROJECT_DIR/images/centos7
+    CONTEXT_DIR: $CI_PROJECT_DIR/images/base
 
 build_conda:
   extends: .docker-build
