--- a/images/base/Dockerfile
+++ b/images/base/Dockerfile
@@ -1,7 +1,7 @@
 #####
 ## Base image for all ESGF images
 ##
-## Currently just a fully-updated CentOS 7 with common packages installed
+## Currently just a fully-updated CentOS 7 with common packages and entrypoint
 #####
 
 FROM centos:7.7.1908
@@ -10,7 +10,7 @@ ENV ESGF_HOME /esg
 
 # Upgrade all existing packages
 # Updating CACHE_BUST to the current time will bust the cache and force a rebuild
-RUN CACHE_BUST="202001301309" && \
+RUN CACHE_BUST="202002101000" && \
     yum makecache && yum upgrade -y && yum clean all
 
 # Install ca-certificates and openssl
@@ -18,14 +18,13 @@ RUN yum makecache && \
     yum install -y epel-release ca-certificates openssl && \
     yum clean all
 
-# Install Tini - see https://github.com/krallin/tini/issues/8 for why
+# Install Tini
 ENV TINI_VERSION v0.18.0
-RUN set -eux; \
-    curl -fsSL -o /bin/tini https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini && \
-    chmod +x /bin/tini
+RUN curl -fsSL -o /usr/local/bin/tini https://github.com/krallin/tini/releases/download/${TINI_VERSION}/tini && \
+    chmod +x /usr/local/bin/tini
 
-# Install our entrypoint script
-COPY docker-entrypoint /bin/docker-entrypoint
+# Include a custom entrypoint that will execute startup scripts
+COPY docker-entrypoint.sh /usr/local/bin/
 
-# Configure the entrypoint
-ENTRYPOINT ["/tini", "--", "/bin/docker-entrypoint"]
+# Set the default entrypoint
+ENTRYPOINT ["/usr/local/bin/tini", "-g", "--", "/usr/local/bin/docker-entrypoint.sh"]
